--- a/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
+++ b/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
@@ -12,5 +12,6 @@ bases:
   - ../../../02-cluster-services/06-acm
   - ../../../02-cluster-services/07-aap
   - ../../../02-cluster-services/08-sealed-secrets
+  - ../../../02-cluster-services/09-patch
 resources:
   - cluster-services-project.yaml
