--- a/03-tenants/04-example-helloworld/setup/namespaces.yaml
+++ b/03-tenants/04-example-helloworld/setup/namespaces.yaml
@@ -1,6 +1,15 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: example-helloworld
+  annotations:
+    argocd.argoproj.io/sync: "true"
+  labels:
+    argocd.argoproj.io/managed-by: openshift-gitops
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: example-helloworld-dev
   annotations:
     argocd.argoproj.io/sync: "true"
