--- a/03-tenants/04-example-helloworld/setup/patch-sa-pipeline.yaml
+++ b/03-tenants/04-example-helloworld/setup/patch-sa-pipeline.yaml
@@ -2,6 +2,7 @@ apiVersion: redhatcop.redhat.io/v1alpha1
 kind: Patch
 metadata:
   name: sa-pipeline
+  namespace: example-helloworld-cicd
 spec:
   serviceAccountRef:
     name: patch
