--- a/01-cluster-config/04-vera/dns.yaml
+++ b/01-cluster-config/04-vera/dns.yaml
@@ -12,7 +12,7 @@ spec:
       upstreams:
         - 172.17.16.2:53
 
-  logLevel: Trace
+  logLevel: Normal
   nodePlacement: {}
   operatorLogLevel: Normal
   upstreamResolvers:
