--- a/01-cluster-config/04-vera/kustomization.yaml
+++ b/01-cluster-config/04-vera/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - staticroute.yaml
+  - staticroute-workers.yaml
+  - staticroute-masters.yaml
   - dns.yaml
