--- a/02-cluster-services/05-cnv/instance/hyperconverged.yaml
+++ b/02-cluster-services/05-cnv/instance/hyperconverged.yaml
@@ -21,7 +21,7 @@ spec:
   featureGates:
     enableCommonBootImageImport: true
     sriovLiveMigration: true
-    withHostPassthroughCPU: false
+    withHostPassthroughCPU: true
   workloadUpdateStrategy:
     batchEvictionInterval: 1m0s
     batchEvictionSize: 10
