--- a/02-cluster-services/05-cnv/instance/hyperconverged.yaml
+++ b/02-cluster-services/05-cnv/instance/hyperconverged.yaml
@@ -22,6 +22,7 @@ spec:
     enableCommonBootImageImport: true
     sriovLiveMigration: true
     withHostPassthroughCPU: true
+    withHostModelCPU: true
   workloadUpdateStrategy:
     batchEvictionInterval: 1m0s
     batchEvictionSize: 10
