--- a/02-cluster-services/03-acs/operator/kustomization.yaml
+++ b/02-cluster-services/03-acs/operator/kustomization.yaml
@@ -1,7 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: openshift-operators
+commonAnnotations:
+  argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+  argocd.argoproj.io/sync-wave: "2"
 
-bases:
-  - https://github.com/redhat-cop/gitops-catalog/advanced-cluster-security-operator/operator/overlays/latest
+
+resources:
+  - 00-namespace.yaml
+  - 01-og.yaml
+  - 02-subscription.yaml
