--- a/02-cluster-services/03-acs/instance/kustomization.yaml
+++ b/02-cluster-services/03-acs/instance/kustomization.yaml
@@ -1,14 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-commonAnnotations:
-  argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
-  argocd.argoproj.io/sync-wave: "2"
-
-
 resources:
-  - central.yaml
-  - create-cluster-init-bundle-job.yaml
-  - create-cluter-init-bundle-sa.yaml
-  - namespace.yaml
-  - secured-cluster.yaml
+  - 5-rhacs-create-init-bundle-job.yaml
+  - 5-rhacs-create-init-bundle-sa.yaml
+  - 5-rhacs-operator-central.yaml
+  - 5-rhacs-operator-securedcluster.yaml
+  - 5-rhacs-operator.yaml
