--- a/02-cluster-services/03-acs/operator/kustomization.yaml
+++ b/02-cluster-services/03-acs/operator/kustomization.yaml
@@ -1,6 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: openshift-gitops
+
+commonAnnotations:
+  argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+  argocd.argoproj.io/sync-wave: "2"
+
 
 resources:
   - operator.yaml
