--- a/02-cluster-services/03-acs/operator/operator.yaml
+++ b/02-cluster-services/03-acs/operator/operator.yaml
@@ -25,7 +25,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "2"
 spec:
   channel: latest
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: rhacs-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
