--- a/02-cluster-services/02-openshift-pipelines/openshift-pipelines-subscription.yaml
+++ b/02-cluster-services/02-openshift-pipelines/openshift-pipelines-subscription.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: openshift-operators
 spec:
   channel: latest
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: openshift-pipelines-operator-rh
   source: redhat-operators
   sourceNamespace: openshift-marketplace
