--- a/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
+++ b/00-argocd/00-clusters/main/02-cluster-services/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 namespace: openshift-gitops
 
 bases:
-#  - ../../../02-cluster-services/01-compliance
+  - ../../../02-cluster-services/01-compliance
   - ../../../02-cluster-services/02-openshift-pipelines
   - ../../../02-cluster-services/03-acs
   - ../../../02-cluster-services/04-odf
@@ -13,6 +13,6 @@ bases:
   - ../../../02-cluster-services/07-aap
 #  - ../../../02-cluster-services/08-sealed-secrets
 #  - ../../../02-cluster-services/09-patch
-#  - ../../../02-cluster-services/10-mtv
+  - ../../../02-cluster-services/10-mtv
 resources:
   - cluster-services-project.yaml
