--- a/02-cluster-services/10-mtv/kustomization.yaml
+++ b/02-cluster-services/10-mtv/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   - namespace.yaml
   - operatorgroup.yaml
   - subscription.yaml
-  - forkliftcontroller.yaml
+#  - forkliftcontroller.yaml
