--- a/02-cluster-services/09-patch/subscription.yaml
+++ b/02-cluster-services/09-patch/subscription.yaml
@@ -6,7 +6,7 @@ metadata:
   name: patch-operator
 spec:
   channel: alpha
-  installPlanApproval: Automatic
+  installPlanApproval: Manual
   name: patch-operator
   source: community-operators
   sourceNamespace: openshift-marketplace
