--- a/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
 - pvc/pvc-workspace.yaml
 
 - configs/sealed-quay-secret.yaml
-- configs/sealed-github-secret.yaml
+#- configs/sealed-github-secret.yaml
 - configs/sealed-signing-secrets.yaml
 - configs/sealed-sonar-secret.yaml
 - configs/sealed-roxsecrets.yaml
