--- a/03-tenants/04-example-helloworld/setup/argo-project.yaml
+++ b/03-tenants/04-example-helloworld/setup/argo-project.yaml
@@ -48,7 +48,7 @@ spec:
     kind: NetworkPolicy  
   - group: 'bitnami.com'
     kind: SealedSecret
-  - group: 'redhatcop.redhat.io/v1alpha1'
+  - group: 'redhatcop.redhat.io'
     kind: Patch
  
   orphanedResources:
