--- a/03-tenants/04-example-helloworld/overlays/cicd/pipelineruns/pipelinerun.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipelineruns/pipelinerun.yaml
@@ -36,6 +36,6 @@ spec:
         claimName: workspace
     - emptyDir: {}
       name: images-url
-    - name: git-basic-auth
-      secret:
-        secretName: github-creds
+#    - name: git-basic-auth
+#      secret:
+#        secretName: github-creds
