--- a/03-tenants/04-example-helloworld/overlays/cicd/pipelines/patch-sa-pipeline.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipelines/patch-sa-pipeline.yaml
@@ -16,6 +16,6 @@ spec:
       patchTemplate: |
         secrets:
         - name: quay-creds
-        - name: github-creds
+#        - name: github-creds
       patchType: application/merge-patch+json
 
