--- a/03-tenants/04-example-helloworld/setup/sa-patch.yaml
+++ b/03-tenants/04-example-helloworld/setup/sa-patch.yaml
@@ -18,17 +18,17 @@ subjects:
 - kind: ServiceAccount
   name: patch
   namespace: example-helloworld-cicd
-#---
-#apiVersion: rbac.authorization.k8s.io/v1
-#kind: ClusterRoleBinding
-#metadata:
-#  name: patch
-#roleRef:
-#  apiGroup: rbac.authorization.k8s.io
-#  kind: ClusterRole
-#  name: view
-#subjects:
-#- kind: ServiceAccount
-#  name: patch
-#  namespace: example-helloworld-cicd
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: patch
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: view
+subjects:
+- kind: ServiceAccount
+  name: patch
+  namespace: example-helloworld-cicd
 
