--- a/00-argocd/03-tenants/04-example-helloworld/example-helloworld-application.yaml
+++ b/00-argocd/03-tenants/04-example-helloworld/example-helloworld-application.yaml
@@ -21,6 +21,7 @@ spec:
       selfHeal: true
     syncOptions:
       - ApplyOutOfSyncOnly=true
+      - CreateNamespace=true
     retry:
       limit: 5 # number of failed sync attempt retries; unlimited number of attempts if less than 0
       backoff:
