--- a/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/kustomization.yaml
@@ -15,7 +15,7 @@ resources:
 - tasks/rox-deployment-check-remote.yaml
 - tasks/rox-image-check-task.yaml
 - tasks/rox-image-scan-task.yaml
-#- tasks/sonarqube-scanner.yaml
+- tasks/sonarqube-scanner.yaml
 
 - pipelines/patch-sa-pipeline.yaml
 - pipelines/pipeline-example-helloworld.yaml
