--- a/03-tenants/04-example-helloworld/overlays/cicd/pipelines/pipeline-example-helloworld-secure.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipelines/pipeline-example-helloworld-secure.yaml
@@ -105,7 +105,7 @@ spec:
         - name: FORMAT
           value: oci
       runAfter:
-        - git-clone
+        - sonarqube-scanner
       taskRef:
         kind: ClusterTask
         name: buildah
