--- a/03-tenants/04-example-helloworld/overlays/cicd/pipelines/pipeline-example-helloworld-secure.yaml
+++ b/03-tenants/04-example-helloworld/overlays/cicd/pipelines/pipeline-example-helloworld-secure.yaml
@@ -60,7 +60,7 @@ spec:
         - name: userHome
           value: /tekton/home
       taskRef:
-        kind: ClusterTask
+        kind: Task
         name: git-clone
       workspaces:
         - name: output
