--- a/02-cluster-services/04-odf/sc_default_annotation/job_change_default_sc_annotation.yaml
+++ b/02-cluster-services/04-odf/sc_default_annotation/job_change_default_sc_annotation.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  generateName: change-default-sc-annotation-
+  name: change-default-sc-annotation
 spec:
   template:
     spec:
