--- a/02-cluster-services/04-odf/sc_default_annotation/job_change_default_sc_annotation.yaml
+++ b/02-cluster-services/04-odf/sc_default_annotation/job_change_default_sc_annotation.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: change-default-sc-annotation
+  generateName: change-default-sc-annotation-
 spec:
   template:
     spec:
