--- a/02-cluster-services/04-odf/kustomization.yaml
+++ b/02-cluster-services/04-odf/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-  - operator
+  - operator/overlays/stable-4.10/
   - instance/overlays/ovirt
-  - sc_default_annotation
+  - node-labeler/overlays/default
+  - sc_default_annotation/overlays/default/
