--- a/00-argocd/02-cluster-services/04-odf/odf-application.yaml
+++ b/00-argocd/02-cluster-services/04-odf/odf-application.yaml
@@ -18,7 +18,7 @@ spec:
   syncPolicy:
     automated:
       prune: false
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - ApplyOutOfSyncOnly=true
     retry:
