--- a/02-cluster-services/04-odf/operator/base/openshift-data-foundation-operator-subscription.yaml
+++ b/02-cluster-services/04-odf/operator/base/openshift-data-foundation-operator-subscription.yaml
@@ -9,3 +9,5 @@ spec:
   name: odf-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
+  startingCSV: odf-operator.v4.10.5
+
