--- a/02-cluster-services/07-aap/pipelines-and-secrets/token-secret-pipeline.yaml
+++ b/02-cluster-services/07-aap/pipelines-and-secrets/token-secret-pipeline.yaml
@@ -7,7 +7,7 @@ spec:
   params:
     - name: NAMESPACE
       type: string
-      description: Namespace that needs a StackRox token secret.
+      description: Namespace that needs a APP token secret.
   tasks:
     - name: create-api-token-secret
       params:
