--- a/00-argocd/02-cluster-services/04-odf/odf-application.yaml
+++ b/00-argocd/02-cluster-services/04-odf/odf-application.yaml
@@ -15,15 +15,15 @@ spec:
     path: 02-cluster-services/04-odf
     repoURL: https://github.com/apoczekalewicz/gitops.git
     targetRevision: HEAD
-#  syncPolicy:
-#    automated:
-#      prune: false
-#      selfHeal: true
-#    syncOptions:
-#      - ApplyOutOfSyncOnly=true
-#    retry:
-#      limit: 5 # number of failed sync attempt retries; unlimited number of attempts if less than 0
-#      backoff:
-#        duration: 5s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
-#        factor: 2 # a factor to multiply the base duration after each failed retry
-#        maxDuration: 10m # the maximum amount of time allowed for the backoff strategy
+  syncPolicy:
+    automated:
+      prune: false
+      selfHeal: true
+   syncOptions:
+      - ApplyOutOfSyncOnly=true
+    retry:
+      limit: 5 # number of failed sync attempt retries; unlimited number of attempts if less than 0
+      backoff:
+        duration: 5s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
+        factor: 2 # a factor to multiply the base duration after each failed retry
+        maxDuration: 10m # the maximum amount of time allowed for the backoff strategy
