--- a/02-cluster-services/06-acm/operator/kustomization.yaml
+++ b/02-cluster-services/06-acm/operator/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-  - github.com/redhat-cop/gitops-catalog/advanced-cluster-management/operator/base/
+resources:
+  - install.yaml
 
 patches:
   - target:
