--- a/00-argocd/02-cluster-services/06-acm/acm-application.yaml
+++ b/00-argocd/02-cluster-services/06-acm/acm-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: acm
+  name: S-ACM
 spec:
   destination:
     namespace: open-cluster-management
