--- a/00-argocd/03-tenants/02-vms/vms-application.yaml
+++ b/00-argocd/03-tenants/02-vms/vms-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "40"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: vms
+  name: T-vms
 spec:
   destination:
     namespace: vms
