--- a/00-argocd/02-cluster-services/01-compliance/compliance-operator-application.yaml
+++ b/00-argocd/02-cluster-services/01-compliance/compliance-operator-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: compliance-operator
+  name: S-compliance-operator
 spec:
   destination:
     namespace: openshift-compliance
