--- a/00-argocd/02-cluster-services/02-openshift-pipelines/openshift-pipelines-application.yaml
+++ b/00-argocd/02-cluster-services/02-openshift-pipelines/openshift-pipelines-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: openshift-pipelines
+  name: S-pipelines
 spec:
   destination:
     namespace: openshift-pipelines
