--- a/00-argocd/02-cluster-services/03-acs/acs-application.yaml
+++ b/00-argocd/02-cluster-services/03-acs/acs-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: acs
+  name: S-acs
 spec:
   destination:
     namespace: openshift-operators
