--- a/00-argocd/02-cluster-services/04-odf/odf-application.yaml
+++ b/00-argocd/02-cluster-services/04-odf/odf-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: odf
+  name: S-odf
 spec:
   destination:
     namespace: openshift-storage
