--- a/00-argocd/02-cluster-services/09-patch/patch-operator-application.yaml
+++ b/00-argocd/02-cluster-services/09-patch/patch-operator-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: patch-operator
+  name: S-patch-operator
 spec:
   destination:
     namespace: patch-operator
