--- a/00-argocd/03-tenants/01-example/example-application.yaml
+++ b/00-argocd/03-tenants/01-example/example-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "40"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: example
+  name: T-example
 spec:
   destination:
     namespace: example
