--- a/00-argocd/01-cluster-config/02-openshift-gitops/openshift-gitops-application.yaml
+++ b/00-argocd/01-cluster-config/02-openshift-gitops/openshift-gitops-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "21"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: C-gitops-config
+  name: c-gitops-config
 spec:
   destination:
     namespace: openshift-gitops
