--- a/00-argocd/02-cluster-services/07-aap/aap-application.yaml
+++ b/00-argocd/02-cluster-services/07-aap/aap-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: S-AAP
+  name: s-app
 spec:
   destination:
     namespace: ansible-automation-platform
