--- a/00-argocd/00-clusters/ocp2/00-bootstrap/bootstrap-application.yaml
+++ b/00-argocd/00-clusters/ocp2/00-bootstrap/bootstrap-application.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "2"
-  name: A-cluster-bootstrap
+  name: a-cluster-bootstrap
 spec:
   destination:
     namespace: openshift-gitops
