--- a/00-argocd/01-cluster-config/01-groups-and-membership/groups-and-membership-application.yaml
+++ b/00-argocd/01-cluster-config/01-groups-and-membership/groups-and-membership-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "22"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: C-groups
+  name: c-groups
 spec:
   destination:
     namespace: openshift-gitops
