--- a/00-argocd/01-cluster-config/03-oauth/oauth-application.yaml
+++ b/00-argocd/01-cluster-config/03-oauth/oauth-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "22"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: C-oauth
+  name: c-oauth
 spec:
   destination:
     namespace: openshift-gitops
