--- a/00-argocd/02-cluster-services/05-cnv/cnv-application.yaml
+++ b/00-argocd/02-cluster-services/05-cnv/cnv-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: S-CNV
+  name: s-cnv
 spec:
   destination:
     namespace: openshift-compliance
