--- a/00-argocd/02-cluster-services/08-sealed-secrets/sealed-secrets-application.yaml
+++ b/00-argocd/02-cluster-services/08-sealed-secrets/sealed-secrets-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: S-sealed-secrets
+  name: s-sealed-secrets
 spec:
   destination:
     namespace: sealed-secrets
