--- a/00-argocd/02-cluster-services/10-mtv/mtv-operator-application.yaml
+++ b/00-argocd/02-cluster-services/10-mtv/mtv-operator-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "37"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: S-MTV
+  name: s-mtv
 spec:
   destination:
     namespace: openshift-mtv
