--- a/00-argocd/03-tenants/04-example-helloworld/example-helloworld-application.yaml
+++ b/00-argocd/03-tenants/04-example-helloworld/example-helloworld-application.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "40"
   labels:
     gitops.ownedBy: openshift-gitops
-  name: T-example-helloworld
+  name: t-example-helloworld
 spec:
   destination:
     namespace: example-helloworld
