--- a/03-tenants/03-example-security/security-pipeline.yaml
+++ b/03-tenants/03-example-security/security-pipeline.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: rox-pipeline
+  name: image-scan-check
 spec:
   description: Rox demo pipeline
   params:
