--- a/03-tenants/03-example-security/security-pipeline.yaml
+++ b/03-tenants/03-example-security/security-pipeline.yaml
@@ -8,6 +8,7 @@ spec:
     - name: image
       type: string
       description: Full name of image to scan (example -- gcr.io/rox/sample:5.0-rc1)
+      default: docker.io/library/httpd:latest
   tasks:
   - name: image-scan
     taskRef:
