--- a/00-argocd/00-clusters/main/03-tenants/kustomization.yaml
+++ b/00-argocd/00-clusters/main/03-tenants/kustomization.yaml
@@ -4,9 +4,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 namespace: openshift-gitops
 
 bases:
-  - ../../../03-tenants/01-example
+#  - ../../../03-tenants/01-example
   - ../../../03-tenants/02-vms
-  - ../../../03-tenants/03-example-security
+#  - ../../../03-tenants/03-example-security
 #  - ../../../03-tenants/04-example-helloworld
 
 resources:
