--- a/00-argocd/02-cluster-services/04-odf/odf-application.yaml
+++ b/00-argocd/02-cluster-services/04-odf/odf-application.yaml
@@ -18,12 +18,12 @@ spec:
   syncPolicy:
     automated:
       prune: false
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - ApplyOutOfSyncOnly=true
     retry:
-      limit: 5 # number of failed sync attempt retries; unlimited number of attempts if less than 0
+      limit: 8 # number of failed sync attempt retries; unlimited number of attempts if less than 0
       backoff:
-        duration: 5s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
+        duration: 15s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
         factor: 2 # a factor to multiply the base duration after each failed retry
-        maxDuration: 10m # the maximum amount of time allowed for the backoff strategy
+        maxDuration: 50m # the maximum amount of time allowed for the backoff strategy
