--- a/setup/install/manifests/operator/sub_gitops.yaml
+++ b/setup/install/manifests/operator/sub_gitops.yaml
@@ -4,7 +4,7 @@ metadata:
   name: openshift-gitops-operator
   namespace: openshift-operators
 spec:
-  channel: stable 
+  channel: latest
   installPlanApproval: Manual
   name: openshift-gitops-operator 
   source: redhat-operators 
