--- a/01-cluster-config/01-groups-and-membership/clusterrolebinding-argo.yaml
+++ b/01-cluster-config/01-groups-and-membership/clusterrolebinding-argo.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: apps-crd-admin
+  name: gitops-admin
 subjects:
 - kind: ServiceAccount
   name: openshift-gitops-argocd-application-controller
