--- a/01-cluster-config/01-groups-and-membership/clusterrolebinding-argo.yaml
+++ b/01-cluster-config/01-groups-and-membership/clusterrolebinding-argo.yaml
@@ -8,5 +8,5 @@ subjects:
   namespace: openshift-gitops
 roleRef:
   kind: ClusterRole 
-  name: apps-crd-admin
+  name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
